[package]
name = "hacker-clone"
version = "0.1.0"
authors = ["Rodolfo Ruiz <rpruiz@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3.1"
actix-web = "3"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0"
tera = "1.5"
